# tetris-mmo

./: .gitignore  config.properties  get-ip.sh  ideas.txt
tetris-client/: main.js  package-lock.json  package.json  script.js  stylesheet.css  tetris-client.html
tetris-server/: Cargo.toml
tetris-server/design documents/: board_state.json  game_over.json  init_game.json  player_input.json  user_command.json
tetris-server/src/: BoardState.rs  block.rs  connection.rs  coordinate.rs  game.rs  game_board.rs  main.rs  offset.rs  piece.rs  player.rs  server.rs
