[package]
name = "tetris-server"
version = "0.1.0"
authors = ["Adam Giles <adamag@cox.net>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
lazy_static = "1.4.0"
dotproperties = "0.1.0"